fix modal window on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -620,6 +620,7 @@ $active_color: #929496;
             line-height: 16px;
             text-align: center;
             color: #FFFFFF;
+            z-index: 10000;
         }
     }
 
